--- a/音乐2.1
+++ b/音乐2.1
@@ -77,7 +77,7 @@ local function CreateFullUI()
     local titleLabel = Instance.new("TextLabel")
     titleLabel.Size = UDim2.new(1, -45, 1, 0)
     titleLabel.Position = UDim2.new(0, 10, 0, 0)
-    titleLabel.Text = "MUSIC PLAYER♪[made by余客upd]"
+    titleLabel.Text = "MUSIC PLAYER♪[made by余客]"
     titleLabel.TextColor3 = Color3.fromRGB(255, 255, 255)
     titleLabel.TextSize = 14
     titleLabel.Font = Enum.Font.GothamBold
@@ -261,8 +261,8 @@ local function CreateFullUI()
             ParentLocations = {workspace, replicatedStorage, game:GetService("Lighting")},
             DelayRange = {100, 500}, -- 毫秒
             ParameterRange = {
-                volume = {0, 100},    -- 合理音量范围
-                pitch = {0.1, 100}    -- 合理音调范围
+                volume = {30, 80},    -- 合理音量范围
+                pitch = {0.8, 1.5}    -- 合理音调范围
             }
         }
     }
