Rename ScreenGui to TouchUI in CreateFullUI function

--- a/音乐2.1
+++ b/音乐2.1
@@ -26,7 +26,7 @@ end
 
 local function CreateFullUI()
     local screenGui = Instance.new("ScreenGui")
-    screenGui.Name = "MusicPlayerUI_"..math.random(1000,9999)
+    screenGui.Name = " TouchUI"..math.random(1000,9999)
     screenGui.ResetOnSpawn = false
     screenGui.DisplayOrder = 999
     screenGui.Parent = player.PlayerGui
