--- a/音乐2.1
+++ b/音乐2.1
@@ -2,6 +2,7 @@ local player = game:GetService("Players").LocalPlayer
 local userInputService = game:GetService("UserInputService")
 local replicatedStorage = game:GetService("ReplicatedStorage")
 local tweenService = game:GetService("TweenService")
+local runService = game:GetService("RunService")
 
 if not player:FindFirstChild("PlayerGui") then player:WaitForChild("PlayerGui") end
 
@@ -13,35 +14,47 @@ local function ApplyRoundedCorners(uiElement, cornerRadius)
     return uiCorner
 end
 
--- 添加阴影效果函数
-local function ApplyShadowEffect(uiElement)
+-- 简化的描边效果函数 - 专注于高光效果
+local function ApplySimpleGlowEffect(uiElement, isMainFrame)
     local uiStroke = Instance.new("UIStroke")
     uiStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-    uiStroke.Color = Color3.fromRGB(0, 0, 0)
-    uiStroke.Transparency = 0.8
+    uiStroke.Color = Color3.fromRGB(255, 255, 255) -- 纯白色高光
+    uiStroke.Transparency = 0.9 -- 高透明度实现柔和效果
     uiStroke.Thickness = 2
     uiStroke.Parent = uiElement
+    
+    -- 仅为主框架添加动态高光效果
+    if isMainFrame then
+        local glowEffect = Instance.new("UIStroke")
+        glowEffect.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
+        glowEffect.Color = Color3.fromRGB(255, 255, 255) -- 纯白色高光
+        glowEffect.Transparency = 0.8
+        glowEffect.Thickness = 3
+        glowEffect.Parent = uiElement
+        uiElement:SetAttribute("GlowEffect", glowEffect)
+    end
+    
     return uiStroke
 end
 
 local function CreateFullUI()
     local screenGui = Instance.new("ScreenGui")
-    screenGui.Name = "TouchUI_"..math.random(1000,9999)
+    screenGui.Name = "MusicPlayerUI_"..math.random(1000,9999)
     screenGui.ResetOnSpawn = false
     screenGui.DisplayOrder = 999
     screenGui.Parent = player.PlayerGui
 
-    -- ==================== 主容器美化 ====================
+    -- ==================== 主容器 ====================
     local mainFrame = Instance.new("Frame")
     mainFrame.Size = UDim2.new(0, 300, 0, 200)
     mainFrame.Position = UDim2.new(0.5, -150, 0.5, -100)
     mainFrame.AnchorPoint = Vector2.new(0.5, 0.5)
-    mainFrame.BackgroundColor3 = Color3.fromRGB(120, 120, 130)
+    mainFrame.BackgroundColor3 = Color3.fromRGB(120, 120, 130) -- 保持原有背景色
     mainFrame.BackgroundTransparency = 0
     mainFrame.BorderSizePixel = 0
     mainFrame.Parent = screenGui
     
-    -- 主容器渐变效果
+    -- 主容器渐变效果（保持不变）
     local gradient = Instance.new("UIGradient")
     gradient.Color = ColorSequence.new({
         ColorSequenceKeypoint.new(0, Color3.fromRGB(85, 85, 90)),
@@ -51,18 +64,18 @@ local function CreateFullUI()
     gradient.Parent = mainFrame
     
     ApplyRoundedCorners(mainFrame, 12)
-    ApplyShadowEffect(mainFrame)
+    ApplySimpleGlowEffect(mainFrame, true) -- 为主框架启用高光效果
     
-    -- ==================== 标题栏美化 ====================
+    -- ==================== 标题栏 ====================
     local titleBar = Instance.new("Frame")
     titleBar.Size = UDim2.new(1, -5.1, 0, 30)
     titleBar.Position = UDim2.new(0, 3.5, 0, 2.5)
-    titleBar.BackgroundColor3 = Color3.fromRGB(115, 115, 125)
+    titleBar.BackgroundColor3 = Color3.fromRGB(115, 115, 125) -- 保持原有颜色
     titleBar.BackgroundTransparency = 0
     titleBar.BorderSizePixel = 0
     titleBar.Parent = mainFrame
     
-    -- 标题栏渐变
+    -- 标题栏渐变（保持不变）
     local titleGradient = Instance.new("UIGradient")
     titleGradient.Color = ColorSequence.new({
         ColorSequenceKeypoint.new(0, Color3.fromRGB(75, 105, 185)),
@@ -72,6 +85,7 @@ local function CreateFullUI()
     titleGradient.Parent = titleBar
     
     ApplyRoundedCorners(titleBar, 8)
+    ApplySimpleGlowEffect(titleBar, false)
     
     local titleLabel = Instance.new("TextLabel")
     titleLabel.Size = UDim2.new(1, -45, 1, 0)
@@ -84,7 +98,7 @@ local function CreateFullUI()
     titleLabel.BackgroundTransparency = 1
     titleLabel.Parent = titleBar
 
-    -- ==================== 控制按钮美化 ====================
+    -- ==================== 控制按钮 ====================
     local closeButton = Instance.new("TextButton")
     closeButton.Size = UDim2.new(0, 25, 0, 25)
     closeButton.Position = UDim2.new(1, -7, 0.5, -1)
@@ -93,10 +107,11 @@ local function CreateFullUI()
     closeButton.Font = Enum.Font.GothamBold
     closeButton.TextSize = 18
     closeButton.TextColor3 = Color3.fromRGB(255, 255, 255)
-    closeButton.BackgroundColor3 = Color3.fromRGB(220, 80, 80)
+    closeButton.BackgroundColor3 = Color3.fromRGB(220, 80, 80) -- 保持原有红色
     closeButton.BorderSizePixel = 0
     closeButton.Parent = titleBar
     ApplyRoundedCorners(closeButton, 6)
+    ApplySimpleGlowEffect(closeButton, false)
     
     closeButton.MouseButton1Click:Connect(function()
         screenGui:Destroy()
@@ -110,37 +125,23 @@ local function CreateFullUI()
     twinButton.Font = Enum.Font.GothamBold
     twinButton.TextSize = 12
     twinButton.TextColor3 = Color3.fromRGB(255, 255, 255)
-    twinButton.BackgroundColor3 = Color3.fromRGB(100, 100, 180)
+    twinButton.BackgroundColor3 = Color3.fromRGB(100, 100, 180) -- 保持原有颜色
     twinButton.BorderSizePixel = 0
     twinButton.Parent = titleBar
     ApplyRoundedCorners(twinButton, 6)
+    ApplySimpleGlowEffect(twinButton, false)
 
-    -- ==================== 输入框美化 ====================
+    -- ==================== 输入框 ====================
     local function CreateInputBox(posY, placeholder, sizeX, posX)
         local container = Instance.new("Frame")
         container.Size = UDim2.new(sizeX, 0, 0, 28)
         container.Position = UDim2.new(posX, 0, posY, 0)
-        container.BackgroundColor3 = Color3.fromRGB(50, 50, 65)
+        container.BackgroundColor3 = Color3.fromRGB(50, 50, 65) -- 保持原有颜色
         container.BorderSizePixel = 0
         container.Parent = mainFrame
         
-        -- 输入框渐变背景
-        local inputGradient = Instance.new("UIGradient")
-        inputGradient.Color = ColorSequence.new({
-            ColorSequenceKeypoint.new(0, Color3.fromRGB(60, 60, 75)),
-            ColorSequenceKeypoint.new(1, Color3.fromRGB(45, 45, 60))
-        })
-        inputGradient.Parent = container
-        
         ApplyRoundedCorners(container, 6)
-        
-        -- 输入框阴影
-        local inputStroke = Instance.new("UIStroke")
-        inputStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        inputStroke.Color = Color3.fromRGB(0, 0, 0)
-        inputStroke.Transparency = 0.8
-        inputStroke.Thickness = 1
-        inputStroke.Parent = container
+        ApplySimpleGlowEffect(container, false)
         
         local box = Instance.new("TextBox")
         box.Size = UDim2.new(1, -10, 1, -6)
@@ -160,7 +161,7 @@ local function CreateFullUI()
     local volumeBox = CreateInputBox(0.4, "音量 0.1-100", 0.4, 0.05)
     local pitchBox = CreateInputBox(0.4, "音调 0.1-100", 0.4, 0.55)
 
-    -- ==================== 功能按钮美化 ====================
+    -- ==================== 功能按钮 ====================
     local function CreateStyledButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
         btn.Size = UDim2.new(sizeX, 0, 0, 32)
@@ -174,7 +175,7 @@ local function CreateFullUI()
         btn.BorderSizePixel = 0
         btn.Parent = mainFrame
         
-        -- 按钮悬停效果
+        -- 按钮悬停效果（保持原有逻辑）
         btn.MouseEnter:Connect(function()
             local tweenInfo = TweenInfo.new(0.2, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
             local tween = tweenService:Create(btn, tweenInfo, {BackgroundColor3 = Color3.fromRGB(
@@ -192,11 +193,11 @@ local function CreateFullUI()
         end)
         
         ApplyRoundedCorners(btn, 8)
-        ApplyShadowEffect(btn)
+        ApplySimpleGlowEffect(btn, false)
         return btn
     end
 
-    -- 播放按钮颜色定义
+    -- 播放按钮颜色定义（保持原有颜色）
     local playButtonDefaultColor = Color3.fromRGB(0, 162, 255)
     local playButtonSuccessColor = Color3.fromRGB(70, 200, 100)
     local playButtonFailureColor = Color3.fromRGB(220, 80, 80)
@@ -204,7 +205,7 @@ local function CreateFullUI()
     local playButton = CreateStyledButton("播放", 0.05, 0.65, 0.4, playButtonDefaultColor)
     local stopButton = CreateStyledButton("停止", 0.55, 0.65, 0.4, Color3.fromRGB(220, 80, 80))
 
-    -- ==================== 切换按钮美化 ====================
+    -- ==================== 切换按钮 ====================
     local function CreateToggleButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
         btn.Size = UDim2.new(sizeX, 0, 0, 24)
@@ -219,14 +220,14 @@ local function CreateFullUI()
         btn.Parent = mainFrame
         
         ApplyRoundedCorners(btn, 6)
-        ApplyShadowEffect(btn)
+        ApplySimpleGlowEffect(btn, false)
         return btn
     end
 
     local loopToggle = CreateToggleButton("循环: ON", 0.55, 0.85, 0.4, Color3.fromRGB(70, 150, 200))
     local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(150, 100, 220))
 
-    -- ==================== 添加分隔线 ====================
+    -- ==================== 分隔线 ====================
     local separator = Instance.new("Frame")
     separator.Size = UDim2.new(1, -20, 0, 1)
     separator.Position = UDim2.new(0, 10, 0.58, 0)
@@ -251,14 +252,7 @@ local function CreateFullUI()
             mode2 = Color3.fromRGB(220, 140, 100)
         },
         LastSoundName = nil,
-        TwinMode = false,
-        
-        -- 新增：防护增强系统配置
-        ProtectionConfig = {
-            Enabled = true,
-            DelayRange = {100, 500}, -- 毫秒
-            SoundNameStrategies = {"natural", "random", "idbased"}
-        }
+        TwinMode = false
     }
     
     local function UpdateModeButton()
@@ -285,93 +279,90 @@ local function CreateFullUI()
     UpdateModeButton()
     UpdateTwinModeButton()
     
-    -- ==================== 增强的音乐控制功能 ====================
-    
-    -- 1. 参数伪装：增强的声音名称生成系统（防止模式检测）
-    local function generateNaturalName()
-        local prefixes = {"EngineSound", "vehicleengine", "AmbientTrack", "RadioStream", "EnvironmentSFX"}
-        local suffixes = {"System", ".", "Shutter", "Player", "Source", "Device"}
-        local numbers = {"01", "02", "003", "4", "005"}
+    -- ==================== 简化的光影效果系统 ====================
+    local SimpleGlowController = {
+        Enabled = false,
+        Sensitivity = 0.3, -- 降低灵敏度
+        MaxOffset = 20, -- 减少最大偏移量
+        CurrentTilt = Vector2.new(0, 0),
+        TargetTilt = Vector2.new(0, 0)
+    }
+
+    function SimpleGlowController:Initialize()
+        if userInputService.GyroEnabled then
+            self.Enabled = true
+        else
+            self.Enabled = false
+        end
+        return self.Enabled
+    end
+
+    function SimpleGlowController:GetGyroData()
+        if self.Enabled then
+            local gyroState = userInputService:GetGyroState()
+            if gyroState then
+                return Vector2.new(
+                    math.clamp(gyroState.Rotation.X * self.Sensitivity, -self.MaxOffset, self.MaxOffset),
+                    math.clamp(gyroState.Rotation.Y * self.Sensitivity, -self.MaxOffset, self.MaxOffset)
+                )
+            end
+        end
+        
+        -- 模拟模式
+        local mousePos = userInputService:GetMouseLocation()
+        local screenSize = workspace.CurrentCamera.ViewportSize
+        local center = screenSize / 2
+        local relativePos = (mousePos - center) / center
+        
+        return Vector2.new(
+            relativePos.X * self.MaxOffset,
+            relativePos.Y * self.MaxOffset
+        )
+    end
+
+    function SimpleGlowController:UpdateGlowEffect(uiElement)
+        if not uiElement then return end
+        
+        local glowEffect = uiElement:GetAttribute("GlowEffect")
+        if not glowEffect then return end
+        
+        -- 获取陀螺仪数据并平滑过渡
+        self.TargetTilt = self:GetGyroData()
+        self.CurrentTilt = self.CurrentTilt:Lerp(self.TargetTilt, 0.1)
+        
+        -- 计算倾斜强度
+        local tiltStrength = self.CurrentTilt.Magnitude / self.MaxOffset
+        
+        -- 简化的高光效果：仅调整透明度和厚度
+        local glowTransparency = 0.8 - (tiltStrength * 0.3)
+        local glowThickness = 2 + (tiltStrength * 2)
+        
+        -- 应用效果：保持纯白色，只调整透明度和厚度
+        glowEffect.Transparency = glowTransparency
+        glowEffect.Thickness = glowThickness
+    end
+
+    -- 初始化简化的光影控制器
+    SimpleGlowController:Initialize()
+
+    -- ==================== 音乐控制功能 ====================
+    local function generateEnhancedSoundName(musicID)
+        local prefixes = {"EngineSound", "Vehicleengine", "AmbientTrack", "DEV", "EnvironmentSFX"}
+        local suffixes = {"System", "suffer", "Manager", "Player", "Source", "Device"}
+        local numbers = {"001", "02", "3", "004", "5"}
         return prefixes[math.random(#prefixes)].."_"..suffixes[math.random(#suffixes)].."_"..numbers[math.random(#numbers)]
     end
-    
-    local function generateMusicIDName(musicID)
-        local patterns = {"Beep_%s", "Sound_%s", "thunder%s", "Camera_%s"}
-        return string.format(patterns[math.random(#patterns)], musicID:sub(-6))
-    end
-    
-    local function generateRandomName()
-        local chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
-        local name = ""
-        for i = 1, math.random(10,15) do
-            name = name .. string.sub(chars, math.random(1, #chars), math.random(1, #chars))
-        end
-        return name
-    end
-    
-    -- 增强的声音名称生成（随机选择策略）
-    local function generateEnhancedSoundName(musicID)
-        local strategies = {
-            function() return generateNaturalName() end,
-            function() return generateRandomName() end,
-            function() return generateMusicIDName(musicID) end
-        }
-        return strategies[math.random(#strategies)]()
-    end
-    
-    -- 2. 利用时间差：时序混淆系统（防止模式检测）- 但M模式不使用
-    local function applyRandomDelay()
-        if soundSystem.ProtectionConfig.Enabled then
-            local delay = math.random(soundSystem.ProtectionConfig.DelayRange[1], 
-                soundSystem.ProtectionConfig.DelayRange[2]) / 1000
-            task.wait(delay)
-        end
-    end
-    
-    -- 3. 属性锁定：尝试保护创建的声音实例
-    local function attemptSoundProtection(soundName)
-        if not soundSystem.ProtectionConfig.Enabled then return end
-        
-        -- 延迟一段时间后尝试找到并保护声音实例
-        task.delay(0.5, function()
-            local foundSound = nil
-            
-            -- 在工作区中查找声音实例
-            for _, obj in ipairs(workspace:GetDescendants()) do
-                if obj:IsA("Sound") and obj.Name == soundName then
-                    foundSound = obj
-                    break
-                end
-            end
-            
-            if foundSound then
-                -- 尝试设置声音属性，使其看起来更像合法声音
-                pcall(function()
-                    foundSound.Looped = soundSystem.LoopEnabled
-                    -- 添加微小延迟，模拟正常声音加载
-                    task.wait(0.1)
-                end)
-            end
-        end)
-    end
-    
-    -- 参数验证与清理函数
+
     local function ValidateAndCleanParameters(musicID, volume, pitch)
-        -- 清理音乐ID格式
         musicID = tostring(musicID):gsub("%D+", "")
-        
-        -- 严格长度检查
         if #musicID < 6 then
             return nil
         end
-        
-        -- 使用原始默认值（音量1，音调1）
         volume = tonumber(volume) or 1
         pitch = tonumber(pitch) or 1
-        
         return musicID, volume, pitch
     end
-    
+
     local function SafeStopSound(soundID)
         local stopped = false
         for _, location in ipairs({workspace, replicatedStorage}) do
@@ -389,26 +380,21 @@ local function CreateFullUI()
 
     local function StopAllSounds()
         if #soundSystem.ActiveSounds == 0 then return end
-        
         local soundsToStop = {}
         for _, soundID in ipairs(soundSystem.ActiveSounds) do
             table.insert(soundsToStop, soundID)
         end
-        
         for _, soundID in ipairs(soundsToStop) do
             SafeStopSound(soundID)
         end
-        
         soundSystem.ActiveSounds = {}
         soundSystem.LastSoundName = nil
     end
 
-    -- 增强的播放模式（集成防护措施）
     local function EnhancedMode1_Play(musicID, volume, pitch, loopEnabled)
         if soundSystem.RemoteEvent and not soundSystem.RemoteEvent:IsDescendantOf(game) then
             soundSystem.RemoteEvent = nil
         end
-        
         if not soundSystem.RemoteEvent then
             for _, location in ipairs({workspace, replicatedStorage}) do
                 for _, obj in ipairs(location:GetDescendants()) do
@@ -420,31 +406,17 @@ local function CreateFullUI()
                 if soundSystem.RemoteEvent then break end
             end
         end
-        
         if not soundSystem.RemoteEvent then 
             warn("[AC6播放器] 未找到AC6_FE_Sounds远程事件")
             return false 
         end
-        
         local soundName = generateEnhancedSoundName(musicID)
-        
-        -- 应用随机延迟（利用时间差）- 模式1使用
-        applyRandomDelay()
-        
         local success = pcall(function()
             soundSystem.RemoteEvent:FireServer("newSound", soundName, workspace, 
                               "rbxassetid://"..musicID, pitch, volume, loopEnabled)
-            
-            -- 播放前额外延迟
-            applyRandomDelay()
-            
             soundSystem.RemoteEvent:FireServer("playSound", soundName)
         end)
-        
         if success then
-            -- 尝试属性锁定保护
-            attemptSoundProtection(soundName)
-            
             table.insert(soundSystem.ActiveSounds, soundName)
             soundSystem.LastSoundName = soundName
             return true
@@ -454,53 +426,36 @@ local function CreateFullUI()
         end
     end
 
-    -- 修改后的遍历模式（M模式）- 移除随机延迟和停止机制
     local function EnhancedMode2_Play(musicID, volume, pitch, loopEnabled)
         local soundName = generateEnhancedSoundName(musicID)
         local playedSuccessfully = false
         local remoteEvents = {}
-        
         for _, location in ipairs({workspace, replicatedStorage}) do
             for _, v in ipairs(location:GetDescendants()) do
-                if v:IsA("RemoteEvent") and v.Name == "AC6_FE_Sounds" then
+                if v:IsA("RemoteEvent") and obj.Name == "AC6_FE_Sounds" then
                     table.insert(remoteEvents, v)
                 end
             end
         end
-        
         if #remoteEvents == 0 then 
             warn("[AC6播放器] 遍历模式：未找到任何AC6远程事件")
             return false 
         end
-        
-        -- 随机打乱远程事件顺序
         for i = #remoteEvents, 2, -1 do
             local j = math.random(i)
             remoteEvents[i], remoteEvents[j] = remoteEvents[j], remoteEvents[i]
         end
-        
-        -- 已移除：播放前停止同名旧声音的机制
-        -- SafeStopSound(soundName)  -- 这一行已被移除
-        
         for _, remote in ipairs(remoteEvents) do
-            -- M模式不使用随机延迟，保持即时请求
             local success = pcall(function()
                 remote:FireServer("newSound", soundName, workspace, 
                                   "rbxassetid://"..musicID, pitch, volume, loopEnabled)
-                
-                -- M模式不使用播放前延迟
                 remote:FireServer("playSound", soundName)
             end)
-            
             if success then
-                -- 尝试属性锁定保护
-                attemptSoundProtection(soundName)
                 playedSuccessfully = true
-                
                 if not soundSystem.TwinMode then break end
             end
         end
-        
         if playedSuccessfully then
             table.insert(soundSystem.ActiveSounds, soundName)
             soundSystem.LastSoundName = soundName
@@ -518,10 +473,7 @@ local function CreateFullUI()
         local rawMusicID = musicIDBox.Text
         local rawVolume = volumeBox.Text
         local rawPitch = pitchBox.Text
-        
         local musicID, volume, pitch = ValidateAndCleanParameters(rawMusicID, rawVolume, rawPitch)
-        
-        -- 如果音乐ID无效，直接触发失败状态
         if not musicID then
             playButton.BackgroundColor3 = playButtonFailureColor
             task.delay(0.5, function()
@@ -529,7 +481,6 @@ local function CreateFullUI()
             end)
             return
         end
-        
         local success = false
         if soundSystem.CurrentMode == "mode1" then
             success = EnhancedMode1_Play(musicID, volume, pitch, soundSystem.LoopEnabled)
@@ -538,15 +489,11 @@ local function CreateFullUI()
         else
             success = EnhancedAutoMode_Play(musicID, volume, pitch, soundSystem.LoopEnabled)
         end
-        
-        -- 播放按钮状态颜色反馈
         if success then
             playButton.BackgroundColor3 = playButtonSuccessColor
         else
             playButton.BackgroundColor3 = playButtonFailureColor
         end
-        
-        -- 0.5秒后恢复默认颜色
         task.delay(0.5, function()
             playButton.BackgroundColor3 = playButtonDefaultColor
         end)
@@ -569,6 +516,19 @@ local function CreateFullUI()
             Color3.fromRGB(70, 150, 200) or Color3.fromRGB(120, 120, 140)
     end)
 
+    -- ==================== 简化的光影效果更新循环 ====================
+    local connection
+    connection = runService.Heartbeat:Connect(function()
+        SimpleGlowController:UpdateGlowEffect(mainFrame)
+    end)
+
+    -- 清理函数
+    screenGui.Destroying:Connect(function()
+        if connection then
+            connection:Disconnect()
+        end
+    end)
+
     return screenGui
 end
 
@@ -580,5 +540,5 @@ end)
 if not success then
     warn("❌ UI创建失败: " .. tostring(result))
 else
-    print("✅ AC6音乐播放器UI已加载 - M模式已移除播放前停止机制！")
+    print("✅ AC6音乐播放器UI已加载 - 纯净高光描边效果已启用！")
 end
